--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@everapi/currencyapi-js": "^1.0.6",
+    "@sweetalert2/theme-dark": "^5.0.26",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "redux": "^5.0.1",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
