--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "redux": "^5.0.1",
+    "scss": "^0.2.4",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
   },
@@ -34,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "sass-embedded": "^1.83.4",
     "vite": "^6.0.1"
   }
 }
