--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@everapi/currencyapi-js": "^1.0.6",
+    "@supabase/supabase-js": "^2.48.1",
     "@sweetalert2/theme-dark": "^5.0.26",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -23,7 +25,9 @@
     "redux": "^5.0.1",
     "scss": "^0.2.4",
     "sweetalert2": "^11.15.10",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
