--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@everapi/currencyapi-js": "^1.0.6",
+    "@reduxjs/toolkit": "^2.6.1",
     "@supabase/supabase-js": "^2.48.1",
     "@sweetalert2/theme-dark": "^5.0.26",
     "animate.css": "^4.1.1",
